# raylib-2d-platformer

./: .clang-format  CMakeLists.txt
libs/: physac.h  raymath.h
src/: constants.hpp  main.cpp
src/ball/: ball.cpp  ball.h
src/character/: character.cpp  character.h  character.hpp
